[frontend/components] Reaction title, consistent custom emoji, fixed gaps, and translucent reacted background color

--- a/Iceshrimp.Frontend/Components/Note/NoteFooter.razor.css
+++ b/Iceshrimp.Frontend/Components/Note/NoteFooter.razor.css
@@ -3,6 +3,10 @@
 }
 
 .reactions {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 0.5rem;
     margin-bottom: 0.5em;
 }
 
